// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package nsl.orchestration;

option go_package = "namespacelabs.dev/foundation/orchestration/proto";

import "schema/runtime/deployable.proto";


message AreServicesReadyRequest {
    foundation.schema.runtime.Deployable deployable = 1;
    string namespace                                = 2;
}

message AreServicesReadyResponse {
    bool   ready   = 1;
    string message = 2;
}

service OrchestrationService {
    rpc AreServicesReady(AreServicesReadyRequest) returns (AreServicesReadyResponse);
}